# CoreLLM

./: .gitattributes  .gitignore  Dockerfile  PYPI_README.md  README.md  app.py  corellm.py  corellm_engine.py  corellm_sdk.py  modal_app.py  model.txt  pyproject.toml  requirements-modal.txt  start.sh
.github/workflows/: keepalive.yml
corellm_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
