[project]
name = "corellm-sdk"
version = "2.0.0"
description = "The simplest way to use powerful LLMs — no API key required"
readme = "PYPI_README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Namit Kumar" }]

keywords = ["llm", "ollama", "langchain", "langgraph", "ai", "corellm", "corellm-sdk"]

dependencies = [
    "httpx>=0.27",
    "langchain>=0.2",
    "langchain-core>=0.2",
    "langgraph>=0.1",
    "langchain-openai>=0.1",
]

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# corellm_sdk.py is a single-file module at the root
py-modules = ["corellm_sdk"]
